All get_workspaces_by SQL functions replaced by universal get_workspaces SQL function